package fr.eseo.e3e.devlogiciel.fraude;

public class Fraude {
}
